--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       db:
         condition: service_healthy
     ports:
-      - "8080:8080"
+      - "8082:8080"   # host 8082 -> contenedor 8080, para no pelear con Jenkins
     environment:
       - SPRING_PROFILES_ACTIVE=dev
       - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/zoo_fantastico
